--- a/css/style.css
+++ b/css/style.css
@@ -86,10 +86,11 @@ button {
   -moz-border-radius: 5rem;
   -ms-border-radius: 5rem;
   -o-border-radius: 5rem;
-  background-color: #7090e7;
+  background-color: #607bc5;
   border: none;
   color: #fff;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
 .result {
