--- a/css/style.css
+++ b/css/style.css
@@ -5,20 +5,28 @@
   font-family: "Urbanist", sans-serif;
 }
 
+:root {
+    --dark-color: #7c8d85;
+    --light-color: #91F9E5;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
   background-color: #8ec5fc;
-  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+  background-image: linear-gradient(62deg, var(--light-color) 0%, var(--dark-color) 100%);
+  background-repeat: no-repeat;
+  /* background-image: linear-gradient(62deg, #8ec5fc 0%, #49516F 100%); */
 }
 
 .quiz-section {
-  width: 50%;
+  width: 90%;
+  max-width: 500px;
   height: auto;
   background-color: #fff;
   border-radius: 0.5rem;
@@ -30,21 +38,28 @@ body {
 }
 
 #question {
-  font-size: 4.4rem;
-  padding: 4rem 5rem;
+  font-size: 2.4rem;
+  padding: 2rem 5rem;
 }
+
 ul {
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
   gap: 2rem;
-  padding: 4rem 5rem;
+  padding: 2rem 5rem;
+}
+
+#submit, li {
+    width: 80%;
+    max-width: 300px;
+    margin: 0 auto;
+    display: block;
 }
 
 li {
   list-style: none;
-  min-width: 40%;
   min-height: 7rem;
   border-radius: 7rem;
   border: 0.2rem solid #e0e0e0;
@@ -68,17 +83,26 @@ input[type="radio"] {
   width: 20px;
   height: 20px;
 }
+input[type="radio"]:focus {
+    outline: none;
+  }
 
 input[type="radio"]:checked {
   background-color: #8ec5fc;
   border-color: #8ec5fc;
 }
 
+li:focus-within {
+    outline: 5px solid #868686;
+    border: .2rem solid #fff;
+  }
+
 .btn {
   padding: 2rem 5rem;
 }
 
-button {
+#submit{
+min-height: 7rem;
   padding: 0 5rem;
   height: 5rem;
   border-radius: 5rem;
@@ -86,11 +110,17 @@ button {
   -moz-border-radius: 5rem;
   -ms-border-radius: 5rem;
   -o-border-radius: 5rem;
-  background-color: #607bc5;
-  border: none;
-  color: #fff;
+  background-color: var(--light-color);
+  border: 4px solid #fff;
+  color: #000;
   font-size: 1.8rem;
   font-weight: bold;
+  
+}
+
+#submit:focus{
+outline: 5px solid var(--light-color);
+
 }
 
 .result {
@@ -111,7 +141,7 @@ button {
 }
 
 .result h2 {
-  font-size: 3.4rem;
+  font-size: 2.4rem;
 }
 
 .result p {
