--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,8 @@ ul {
 
 #submit,
 li {
-  width: 80%;
-  max-width: 300px;
+  width: 90%;
+  max-width: 450px;
   margin: 0 auto;
   display: block;
 }
@@ -106,8 +106,8 @@ label {
 
 label::before{
   content: "";
-  height: 1.5em;
-  width: 1.5em;
+  height: 1.5rem;
+  width: 1.5rem;
   border: 3px solid var(--darkest-color);
   /* border: 3px solid #e0e0e0; */
   border-radius: 50%;
@@ -160,7 +160,7 @@ input[type="radio"]:checked + label::before {
   -moz-border-radius: 5rem;
   -ms-border-radius: 5rem;
   -o-border-radius: 5rem;
-  background-color: var(--light-color);
+  background-color: #FF9670;
   border: 4px solid #fff;
   color: #000;
   font-size: 1.8rem;
@@ -168,11 +168,11 @@ input[type="radio"]:checked + label::before {
 }
 
 #submit:focus {
-  outline: 5px solid var(--light-color);
+  outline: 5px solid #FF9670;
 } 
 
 #submit:hover {
-  background-color: var(--dark-color);
+  background-color: #ffb499;
 }
 
 .result {
