--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,16 @@ body {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
-#question {
+.question-number{
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 2rem;
+}
+
+#question  {
+  text-align: center;
   font-size: 2.4rem;
-  padding: 2rem 5rem;
+  padding: 2rem;
 }
 
 ul {
